# IntentMCP

./: README.md
bbs/benches/: zkp_bench.rs
bbs/src/: bbs_plus.rs  nullifier.rs
intentMCP/: Cargo.toml
intentMCP/examples/: demo.rs
intentMCP/src/: lib.rs  zkp.rs
