[package]
name = "fua-mcp-zkp"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bls12-381 = "0.4"
ark-ec = "0.4"
ark-ff = "0.4"
ark-std = "0.4"
ark-serialize = "0.4"
ark-groth16 = "0.4"
ark-snark = "0.4"
ark-r1cs-std = "0.4"
ark-relations = "0.4"
sha2 = "0.10"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "zkp_bench"
harness = false